--- a/src/global-settings/_hu-colors.scss
+++ b/src/global-settings/_hu-colors.scss
@@ -10,7 +10,7 @@ $hu-colors: (
     700: #888,
     800: #626262,
     900: #495b60,
-    1000: #000,
+    1000: #140a01,
   ),
   blue: (
     100: #f3f9ff,
