--- a/src/mixins/_index.scss
+++ b/src/mixins/_index.scss
@@ -6,6 +6,7 @@
 @import "hu-parent";
 @import "hu-print";
 @import "hu-pseudo";
+@import "hu-reduced-motion";
 @import "hu-responsive-group-state";
 @import "hu-responsive-state";
 @import "hu-responsive";
