Support separate focus/hover & js focus polyfills

--- a/src/classes/_hu-border-radius.scss
+++ b/src/classes/_hu-border-radius.scss
@@ -43,8 +43,8 @@ $hu-border-radius-types: (
         }
       }
 
-      @if ($module == hocus) {
-        @include hu-hocus($class-name) {
+      @if ($module == focus or $module == hocus or $module == hover) {
+        @include hu-hocus($class-name, $module) {
           @each $property in $properties {
             #{$property}: $value;
           }
