--- a/src/classes/_hu-momentum-scrolling.scss
+++ b/src/classes/_hu-momentum-scrolling.scss
@@ -18,8 +18,8 @@ $hu-momentum-scrolling-modules: (base) !default;
     }
   }
 
-  @if ($module == hocus) {
-    @include hu-hocus($class-name) {
+  @if ($module == focus or $module == hocus or $module == hover) {
+    @include hu-hocus($class-name, $module) {
       #{$property}: $value;
     }
   }
