--- a/src/classes/_hu-text-decoration.scss
+++ b/src/classes/_hu-text-decoration.scss
@@ -24,8 +24,8 @@ $hu-text-decoration-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
