--- a/src/classes/_hu-align-content.scss
+++ b/src/classes/_hu-align-content.scss
@@ -32,8 +32,8 @@ $hu-align-content-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
