--- a/src/classes/_hu-align-items.scss
+++ b/src/classes/_hu-align-items.scss
@@ -30,8 +30,8 @@ $hu-align-items-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
