--- a/src/classes/_hu-blend-mode.scss
+++ b/src/classes/_hu-blend-mode.scss
@@ -38,8 +38,8 @@ $hu-blend-mode-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
