--- a/src/classes/_hu-cursor.scss
+++ b/src/classes/_hu-cursor.scss
@@ -28,8 +28,8 @@ $hu-cursor-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
