--- a/src/classes/_hu-flex-shrink.scss
+++ b/src/classes/_hu-flex-shrink.scss
@@ -20,8 +20,8 @@ $hu-flex-shrink-types: $hu-flex-grow-types !default;
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
