--- a/src/classes/_hu-height.scss
+++ b/src/classes/_hu-height.scss
@@ -25,8 +25,8 @@ $hu-height-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
