--- a/src/classes/_hu-opacity.scss
+++ b/src/classes/_hu-opacity.scss
@@ -34,8 +34,8 @@ $hu-opacity-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
