--- a/src/classes/_hu-order.scss
+++ b/src/classes/_hu-order.scss
@@ -27,8 +27,8 @@ $hu-order-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
