--- a/src/classes/_hu-svg-fill-rule.scss
+++ b/src/classes/_hu-svg-fill-rule.scss
@@ -23,8 +23,8 @@ $hu-svg-fill-rule-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
