--- a/src/classes/_hu-svg-stroke-color.scss
+++ b/src/classes/_hu-svg-stroke-color.scss
@@ -21,8 +21,8 @@ $hu-svg-stroke-color-types: $hu-svg-fill-color-types !default;
         }
       }
 
-      @if ($module == hocus) {
-        @include hu-hocus($class-name) {
+      @if ($module == focus or $module == hocus or $module == hover) {
+        @include hu-hocus($class-name, $module) {
           #{$property}: $value;
         }
       }
