--- a/src/classes/_hu-transition-easing.scss
+++ b/src/classes/_hu-transition-easing.scss
@@ -53,8 +53,8 @@ $hu-transition-easing-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
