--- a/src/classes/_hu-visually-hidden.scss
+++ b/src/classes/_hu-visually-hidden.scss
@@ -27,8 +27,8 @@ $hu-visually-hidden-modules: (base) !default;
     }
   }
 
-  @if ($module == hocus) {
-    @include hu-hocus($class-name) {
+  @if ($module == focus or $module == hocus or $module == hover) {
+    @include hu-hocus($class-name, $module) {
       @include _hu-visually-hidden-declarations;
     }
   }
