--- a/src/classes/_hu-width.scss
+++ b/src/classes/_hu-width.scss
@@ -40,8 +40,8 @@ $hu-width-types: (
       }
     }
 
-    @if ($module == hocus) {
-      @include hu-hocus($class-name) {
+    @if ($module == focus or $module == hocus or $module == hover) {
+      @include hu-hocus($class-name, $module) {
         #{$property}: $value;
       }
     }
