Refactor classes to use generic mixin

--- a/src/classes/_hu-border-color.scss
+++ b/src/classes/_hu-border-color.scss
@@ -5,75 +5,9 @@
         $side-properties: if($side-properties, $side-properties, $side-type);
         $class-name: hu-class-name(#{$side-type}-color-#{$hue}-#{$color-scale});
 
-        @if ($module == base) {
-          @include hu-base($class-name) {
-            @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
-          }
-        }
-
-        @else if ($module == focus or $module == hocus or $module == hover) {
-          @include hu-hocus($class-name, $module) {
-            @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
-          }
-        }
-
-        @else if ($module == state) {
-          @include hu-state($class-name) {
-            @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
-          }
-        }
-
-        @else if ($module == group-hover) {
-          @include hu-group-hover($class-name) {
-            @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
-          }
-        }
-
-        @else if ($module == group-state) {
-          @include hu-group-state($class-name) {
-            @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
-          }
-        }
-
-        @else if ($module == responsive) {
-          @include hu-responsive($class-name) {
-            @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
-          }
-
-          @if (index($hu-border-color-modules, state)) {
-            @include hu-responsive-state($class-name) {
-              @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
-            }
-          }
-
-          @if (index($hu-border-color-modules, group-state)) {
-            @include hu-responsive-group-state($class-name) {
-              @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
-            }
-          }
-        }
-
-        @else if ($module == print) {
-          @include hu-print($class-name) {
-            @each $property in $side-properties {
-              #{$property}-color: $color-value;
-            }
+        @include hu-generic($class-name, $module, $hu-border-color-modules) {
+          @each $property in $side-properties {
+            #{$property}-color: $color-value;
           }
         }
       }
