--- a/src/mixins/_index.scss
+++ b/src/mixins/_index.scss
@@ -1,5 +1,6 @@
 @import "hu-base";
 @import "hu-bump-specificity";
+@import "hu-generic";
 @import "hu-group-hover";
 @import "hu-group-state";
 @import "hu-hocus";
