--- a/src/classes/_hu-border-width.scss
+++ b/src/classes/_hu-border-width.scss
@@ -5,75 +5,9 @@
       $class-name: hu-class-name(#{$side-type}-width-#{$type});
       $value: if($value, $value, $type);
 
-      @if ($module == base) {
-        @include hu-base($class-name) {
-          @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
-        }
-      }
-
-      @else if ($module == focus or $module == hocus or $module == hover) {
-        @include hu-hocus($class-name, $module) {
-          @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
-        }
-      }
-
-      @else if ($module == state) {
-        @include hu-state($class-name) {
-          @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
-        }
-      }
-
-      @else if ($module == group-hover) {
-        @include hu-group-hover($class-name) {
-          @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
-        }
-      }
-
-      @else if ($module == group-state) {
-        @include hu-group-state($class-name) {
-          @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
-        }
-      }
-
-      @else if ($module == responsive) {
-        @include hu-responsive($class-name) {
-          @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
-        }
-
-        @if (index($hu-border-color-modules, state)) {
-          @include hu-responsive-state($class-name) {
-            @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
-          }
-        }
-
-        @if (index($hu-border-color-modules, group-state)) {
-          @include hu-responsive-group-state($class-name) {
-            @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
-          }
-        }
-      }
-
-      @else if ($module == print) {
-        @include hu-print($class-name) {
-          @each $property in $side-properties {
-            #{$property}-width: $value;
-          }
+      @include hu-generic($class-name, $module, $hu-border-width-modules) {
+        @each $property in $side-properties {
+          #{$property}-width: $value;
         }
       }
     }
